k8s/apps/network/traefik/external/dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik
spec:
  hostnames:
    - traefik.jnobrega.com
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: api@internal
          kind: TraefikService
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-outpost
      matches:
        - path:
            type: PathPrefix
            value: /
